# python-monorepo

./: workspace.json
services/svc1/: README.md  pyproject.toml
services/svc1/svc1/: app.py
